# affinidi-tdk-rs

./: .dockerignore  .gitignore  .snyk  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cargo_projects.list  deny.toml  docker-compose.test.yml  rust-toolchain.toml  verify-publish.sh
affinidi-meeting-place/: CHANGELOG.md  Cargo.toml
affinidi-meeting-place/src/: authentication.rs  lib.rs
affinidi-tdk/: CHANGELOG.md  Cargo.toml  README.md
affinidi-tdk-common/: Cargo.toml
affinidi-tdk-common/affinidi-did-authentication/: CHANGELOG.md  Cargo.toml  README.md  environments.json
affinidi-tdk-common/affinidi-did-authentication/src/: lib.rs  main.rs
affinidi-tdk-common/affinidi-secrets-resolver/: CHANGELOG.md  Cargo.toml  README.md
affinidi-tdk-common/affinidi-secrets-resolver/src/: errors.rs  lib.rs  secrets.rs
affinidi-tdk-common/src/: environments.rs  errors.rs  lib.rs  profiles.rs
affinidi-tdk/examples/: test.rs
affinidi-tdk/src/: config.rs  did_authentication.rs  lib.rs  profile.rs
crates/affinidi-did-authentication/: Cargo.toml
crates/affinidi-did-authentication/src/: cache.rs  errors.rs  lib.rs
crates/affinidi-did-resolver/affinidi-did-common/: Cargo.toml  README.md
crates/affinidi-did-resolver/affinidi-did-common/src/: builder.rs  did.rs  document.rs  lib.rs  one_or_many.rs  service.rs  verification_method.rs
crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk/: Cargo.toml  README.md  affinidi-did-resolver-cache-sdk.cdx.json  affinidi-did-resolver-cache-sdk.cdx.xml
crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk/examples/: benchmark.rs  local_resolve.rs
crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk/src/: config.rs  document.rs  errors.rs  lib.rs
crates/affinidi-did-resolver/affinidi-did-resolver-cache-server/: Cargo.toml  README.md  affinidi-did-resolver-cache-server.cdx.json  affinidi-did-resolver-cache-server.cdx.xml
crates/affinidi-did-resolver/affinidi-did-resolver-cache-server/src/: common.rs  config.rs  errors.rs  lib.rs  server.rs  session.rs  statistics.rs
crates/affinidi-did-resolver/affinidi-did-resolver-cache-server/tests/: integration_test.rs
crates/affinidi-did-resolver/affinidi-did-resolver-traits/: Cargo.toml  README.md
crates/affinidi-did-resolver/affinidi-did-resolver-traits/src/: error.rs  lib.rs  resolvers.rs
crates/affinidi-meeting-place/: CHANGELOG.md  Cargo.toml  README.md  affinidi-meeting-place.cdx.json  affinidi-meeting-place.cdx.xml
crates/affinidi-meeting-place/examples/: meeting_place.rs
crates/affinidi-meeting-place/src/: errors.rs  lib.rs  offers.rs  vcard.rs
crates/affinidi-messaging/affinidi-messaging-didcomm/: Cargo.toml  README.md  affinidi-messaging-didcomm.cdx.json  affinidi-messaging-didcomm.cdx.xml
crates/affinidi-messaging/affinidi-messaging-didcomm/src/: document.rs  envelope.rs  identity.rs  lib.rs  store.rs
crates/affinidi-messaging/affinidi-messaging-helpers/: Cargo.toml  README.md  affinidi-messaging-helpers.cdx.json  affinidi-messaging-helpers.cdx.xml  environments.json.orig
crates/affinidi-messaging/affinidi-messaging-helpers/examples/: alice_bob.rs  alice_bob_self_change.rs  delete_test.rs  discover_features_responder.rs  hijack_admin.rs  mediator_ping.rs  multi_device.rs  oob_invite.rs  protocol_comparison.rs  read_raw_didcomm.rs  spoof_test.rs  test.rs  trust_ping.rs  unified_messaging.rs
crates/affinidi-messaging/affinidi-messaging-mediator/: Cargo.toml  ERRORS.md  README.md  affinidi-messaging-mediator.cdx.json  affinidi-messaging-mediator.cdx.xml
crates/affinidi-messaging/affinidi-messaging-mediator/.cargo/: config.toml
crates/affinidi-messaging/affinidi-messaging-mediator/affinidi-messaging-mediator-common/: Cargo.toml  affinidi-messaging-mediator-common.cdx.json  affinidi-messaging-mediator-common.cdx.xml
crates/affinidi-messaging/affinidi-messaging-mediator/affinidi-messaging-mediator-processors/: CHANGELOG.md  Cargo.toml  affinidi-messaging-mediator-processors.cdx.json  affinidi-messaging-mediator-processors.cdx.xml
crates/affinidi-messaging/affinidi-messaging-mediator/conf/: atm-functions.lua  curr_mediator.toml  mediator.toml  mediator_default.toml  mediator_did.json  mediator_pmcn.toml
crates/affinidi-messaging/affinidi-messaging-mediator/docs/: didcomm-protocols.md
crates/affinidi-messaging/affinidi-messaging-mediator/src/: didcomm_compat.rs  lib.rs  server.rs
crates/affinidi-messaging/affinidi-messaging-mediator/tests/: integration_test.rs  integration_test_messaging.rs
crates/affinidi-messaging/affinidi-messaging-sdk/: Cargo.toml  README.md  affinidi-messaging-sdk.cdx.json  affinidi-messaging-sdk.cdx.xml
crates/affinidi-messaging/affinidi-messaging-sdk/src/: config.rs  errors.rs  lib.rs  profiles.rs
crates/affinidi-messaging/affinidi-messaging-text-client/: Cargo.toml  affinidi-messaging-text-client.cdx.json  affinidi-messaging-text-client.cdx.xml
crates/affinidi-secrets-resolver/: Cargo.toml
crates/affinidi-secrets-resolver/src/: lib.rs  task.rs
crates/affinidi-tdk/: CHANGELOG.md  Cargo.toml  README.md
crates/affinidi-tdk-common/: CHANGELOG.md  Cargo.toml
crates/affinidi-tdk-common/src/: config.rs  environments.rs  lib.rs
crates/affinidi-tdk-common/src/tasks/: authentication.rs
crates/affinidi-tdk/affinidi-tdk/: CHANGELOG.md  Cargo.toml  README.md  affinidi-tdk.cdx.json  affinidi-tdk.cdx.xml
crates/affinidi-tdk/examples/: did_auth.rs
crates/affinidi-tdk/src/: lib.rs
crates/core/affinidi-bbs/: CHANGELOG.md  Cargo.toml  README.md
crates/core/affinidi-cesr/: CHANGELOG.md  Cargo.toml  README.md
crates/core/affinidi-crypto/: CHANGELOG.md  Cargo.toml  README.md
crates/core/affinidi-rate-limit/: CHANGELOG.md  Cargo.toml  README.md
crates/core/affinidi-secrets-resolver/: CHANGELOG.md  Cargo.toml
crates/core/affinidi-task-utils/: CHANGELOG.md  Cargo.toml  README.md
crates/credentials/affinidi-data-integrity/: CHANGELOG.md  Cargo.toml  README.md
crates/credentials/affinidi-mdoc/: CHANGELOG.md  Cargo.toml  README.md
interop/: Cargo.toml  README.md
interop/src/: main.rs
(+1394 files in other folders)
