[workspace]
members = [
  # Core: encoding, cryptography, key management
  "crates/core/affinidi-encoding",
  "crates/core/affinidi-crypto",
  "crates/core/affinidi-secrets-resolver",
  "crates/core/affinidi-bbs",

  # Identity: DID resolution, authentication
  "crates/identity/affinidi-did-common",
  "crates/identity/affinidi-did-resolver-cache-sdk",
  "crates/identity/affinidi-did-resolver-cache-server",
  "crates/identity/did-methods/did-example",
  "crates/identity/did-methods/did-scid",
  "crates/identity/affinidi-did-resolver-traits",
  "crates/identity/affinidi-did-authentication",

  # Credentials: formats, proofs, status
  "crates/credentials/affinidi-sd-jwt",
  "crates/credentials/affinidi-data-integrity",
  "crates/credentials/affinidi-rdf-encoding",
  "crates/credentials/affinidi-vc",
  "crates/credentials/affinidi-status-list",
  "crates/credentials/affinidi-sd-jwt-vc",
  "crates/credentials/affinidi-mdoc",

  # Protocols: OpenID4VCI, OpenID4VP
  "crates/protocols/affinidi-openid4vci",
  "crates/protocols/affinidi-openid4vp",

  # Messaging: DIDComm, SDK, mediator
  "crates/messaging/affinidi-messaging-didcomm",
  "crates/messaging/affinidi-messaging-sdk",
  "crates/messaging/affinidi-messaging-helpers",
  "crates/messaging/affinidi-messaging-didcomm-service",
  "crates/messaging/affinidi-messaging-mediator/affinidi-messaging-mediator-common",
  "crates/messaging/affinidi-messaging-mediator/affinidi-messaging-mediator-processors",
  "crates/messaging/affinidi-messaging-mediator",
  "crates/messaging/affinidi-messaging-text-client",

  # Trust: trust infrastructure
  "crates/trust/affinidi-trust-lists",

  # TDK: unified entry point
  "crates/tdk/affinidi-tdk-common",
  "crates/tdk/affinidi-tdk",

  # Applications
  "crates/applications/affinidi-meeting-place",
]
resolver = "3"

[workspace.package]
description = "Affinidi Trust Development Kit. A Rust library for building secure, privacy-preserving, and interoperable applications."
edition = "2024"
authors = ["Glenn Gore <glenn@affinidi.com>"]
readme = "README.md"
homepage = "https://affinidi.com/"
license = "Apache-2.0"
keywords = ["ssi", "affinidi"]
repository = "https://github.com/affinidi/affinidi-tdk-rs"
publish = true
rust-version = "1.90.0"

[workspace.dependencies]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true

[patch.crates-io]
affinidi-did-resolver-cache-sdk = { path = "crates/identity/affinidi-did-resolver-cache-sdk" }
affinidi-tdk-common = { path = "crates/tdk/affinidi-tdk-common" }
affinidi-messaging-sdk = { path = "crates/messaging/affinidi-messaging-sdk" }
affinidi-meeting-place = { path = "crates/applications/affinidi-meeting-place" }
affinidi-messaging-didcomm-service = { path = "crates/messaging/affinidi-messaging-didcomm-service" }

[workspace.lints.clippy]
uninlined_format_args = "warn"
