[workspace]
members = [
  # Core: encoding, cryptography, key management, CESR
  "crates/core/affinidi-cesr",
  "crates/core/affinidi-encoding",
  "crates/core/affinidi-crypto",
  "crates/core/affinidi-secrets-resolver",
  "crates/core/affinidi-bbs",

  # Identity: DID resolution, authentication
  "crates/identity/affinidi-did-common",
  "crates/identity/affinidi-did-resolver-cache-sdk",
  "crates/identity/affinidi-did-resolver-cache-server",
  "crates/identity/did-methods/did-example",
  "crates/identity/did-methods/did-scid",
  "crates/identity/did-methods/did-ebsi",
  "crates/identity/affinidi-did-resolver-traits",
  "crates/identity/affinidi-did-authentication",

  # Credentials: formats, proofs, status
  "crates/credentials/affinidi-sd-jwt",
  "crates/credentials/affinidi-data-integrity",
  "crates/credentials/affinidi-rdf-encoding",
  "crates/credentials/affinidi-vc",
  "crates/credentials/affinidi-status-list",
  "crates/credentials/affinidi-sd-jwt-vc",
  "crates/credentials/affinidi-mdoc",

  # Protocols: OID4VC core, SIOPv2, OpenID4VCI, OpenID4VP
  "crates/protocols/affinidi-oid4vc-core",
  "crates/protocols/affinidi-siopv2",
  "crates/protocols/affinidi-openid4vci",
  "crates/protocols/affinidi-openid4vp",

  # Messaging: core, DIDComm, TSP, SDK, mediator
  "crates/messaging/affinidi-messaging-core",
  "crates/messaging/affinidi-messaging-didcomm",
  "crates/messaging/affinidi-tsp",
  "crates/messaging/affinidi-messaging-sdk",
  "crates/messaging/affinidi-messaging-helpers",
  "crates/messaging/affinidi-messaging-didcomm-service",
  "crates/messaging/affinidi-messaging-mediator/affinidi-messaging-mediator-common",
  "crates/messaging/affinidi-messaging-mediator/affinidi-messaging-mediator-processors",
  "crates/messaging/affinidi-messaging-mediator",
  "crates/messaging/affinidi-messaging-text-client",

  # Trust: trust infrastructure
  "crates/trust/affinidi-trust-lists",

  # TDK: unified entry point
  "crates/tdk/affinidi-tdk-common",
  "crates/tdk/affinidi-tdk",

  # Applications
  "crates/applications/affinidi-meeting-place",
]
resolver = "3"

[workspace.package]
description = "Affinidi Trust Development Kit. A Rust library for building secure, privacy-preserving, and interoperable applications."
edition = "2024"
authors = ["Glenn Gore <glenn@affinidi.com>"]
readme = "README.md"
homepage = "https://affinidi.com/"
license = "Apache-2.0"
keywords = ["ssi", "affinidi"]
repository = "https://github.com/affinidi/affinidi-tdk-rs"
publish = true
rust-version = "1.90.0"

[workspace.dependencies]
tokio = "1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true

# Redirect crates.io deps to local workspace crates so all members use the same version.
# Only needed for crates that are referenced by version (not path) in other workspace members.
[patch.crates-io]
affinidi-secrets-resolver = { path = "crates/core/affinidi-secrets-resolver" }
affinidi-did-resolver-cache-sdk = { path = "crates/identity/affinidi-did-resolver-cache-sdk" }
affinidi-did-common = { path = "crates/identity/affinidi-did-common" }
affinidi-crypto = { path = "crates/core/affinidi-crypto" }
affinidi-encoding = { path = "crates/core/affinidi-encoding" }
affinidi-data-integrity = { path = "crates/credentials/affinidi-data-integrity" }
affinidi-messaging-didcomm = { path = "crates/messaging/affinidi-messaging-didcomm" }
affinidi-messaging-sdk = { path = "crates/messaging/affinidi-messaging-sdk" }
affinidi-did-authentication = { path = "crates/identity/affinidi-did-authentication" }
affinidi-tdk-common = { path = "crates/tdk/affinidi-tdk-common" }
affinidi-tsp = { path = "crates/messaging/affinidi-tsp" }
vta-sdk = { path = "../../fpp/verifiable-trust-infrastructure/vta-sdk" }

[workspace.lints.clippy]
uninlined_format_args = "warn"
