[package]
name = "affinidi-meeting-place"
description = "Affinidi Meeting Place SDK. Discover and connect with others in a secure and private way."
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
license.workspace = true
keywords = ["ssi", "ATM", "affinidi", "DIDComm"]
repository = "https://github.com/affinidi/affinidi-tdk-rs/affinidi-meeting-place"
publish.workspace = true
rust-version.workspace = true

[dependencies]
