[package]
name = "affinidi-tdk-common"
description = "Common utilities for Affinidi Trust Development Kit."
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
