[package]
name = "affinidi-tdk-common"
description = "Common utilities for Affinidi Trust Development Kit."
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
affinidi-secrets-resolver.workspace = true
affinidi-did-resolver-cache-sdk.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
