[package]
name = "affinidi-tdk"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
