[package]
name = "affinidi-tdk"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = ["messaging", "meeting-place"]
messaging = ["dep:affinidi-messaging-sdk"]
meeting-place = ["dep:affinidi-meeting-place"]

[dependencies]
affinidi-did-resolver-cache-sdk.workspace = true
affinidi-messaging-sdk = { workspace = true, optional = true }
affinidi-messaging-didcomm.workspace = true
affinidi-tdk-common.workspace = true
affinidi-secrets-resolver.workspace = true
affinidi-meeting-place = { workspace = true, optional = true }
did-peer.workspace = true
reqwest.workspace = true
rustls.workspace = true
rustls-platform-verifier.workspace = true
ssi.workspace = true
