# TSP interop harness — affinidi-tsp <-> the ToIP reference (tsp_sdk).
#
# This is a LOCAL developer harness, NOT part of the main workspace or CI. It is
# its own standalone workspace (the empty [workspace] table below) so the main
# `cargo` invocations never build it and tsp_sdk's dependency graph never has to
# co-resolve with the workspace.
#
# Prerequisite: a checkout of tsp_sdk 0.9.0-alpha2 at ../../tsp-sdk (i.e.
# ~/devel/tsp-sdk, sibling of this repo), patched to build without the `resolve`
# feature. See interop/README.md for the exact patches.
[package]
name = "tsp-interop"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
# affinidi-tsp from this repo (picks up local edits).
affinidi-tsp = { path = "../crates/messaging/affinidi-tsp", default-features = false }
# The ToIP reference, built WITHOUT `resolve` (no didwebvh diamond) so it can
# share one dependency graph with affinidi-tsp.
tsp_sdk = { path = "../../tsp-sdk", default-features = false, features = ["serialize"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde_json = "1"
base64ct = { version = "1", features = ["alloc"] }
url = "2"

[[bin]]
name = "interop"
path = "src/main.rs"
