[package]
name = "affinidi-meeting-place"
version = "0.3.0"
description = "Affinidi Meeting Place SDK. Discover and connect with others in a secure and private way."
edition.workspace = true
authors.workspace = true
readme = "README.md"
homepage.workspace = true
license.workspace = true
keywords = ["ssi", "ATM", "affinidi", "DIDComm"]
repository.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
affinidi-did-authentication = "0.3"
affinidi-tdk-common = "0.4"
affinidi-messaging-didcomm = "0.12"
affinidi-did-resolver-cache-sdk = "0.8"
affinidi-did-common = "0.3"

base64 = "0.22"
chrono = "0.4"
reqwest = { version = "0.13", features = ["rustls", "json"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
uuid = { version = "1.21", features = ["v4", "fast-rng"] }

[dev-dependencies]
affinidi-secrets-resolver = "0.5"

clap = { version = "4.5", features = ["derive"] }
rustls = { version = "0.23", default-features = false, features = [
  "aws_lc_rs",
  "tls12",
] }
tokio = { version = "1.49", features = ["full"] }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "json",
] }
