[package]
name = "affinidi-meeting-place"
version = "0.3.0"
description = "Affinidi Meeting Place SDK. Discover and connect with others in a secure and private way."
edition.workspace = true
authors.workspace = true
readme = "README.md"
homepage.workspace = true
license.workspace = true
keywords = ["ssi", "ATM", "affinidi", "DIDComm"]
repository.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
affinidi-did-authentication = { version = "0.3", path = "../affinidi-tdk/common/affinidi-did-authentication" }
affinidi-tdk-common = { version = "0.4", path = "../affinidi-tdk/common/affinidi-tdk-common" }
affinidi-messaging-didcomm = { version = "0.12", path = "../affinidi-messaging/affinidi-messaging-didcomm" }
affinidi-did-resolver-cache-sdk = { version = "0.8", path = "../affinidi-did-resolver/affinidi-did-resolver-cache-sdk" }
affinidi-did-common = { version = "0.3", path = "../affinidi-did-resolver/affinidi-did-common" }

base64 = "0.22"
chrono = "0.4"
reqwest = { version = "0.13", features = ["rustls", "json"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
uuid = { version = "1.21", features = ["v4", "fast-rng"] }

[dev-dependencies]
affinidi-secrets-resolver = { version = "0.5", path = "../affinidi-tdk/common/affinidi-secrets-resolver" }

clap = { version = "4.5", features = ["derive"] }
rustls = { version = "0.23", default-features = false, features = [
  "aws_lc_rs",
  "tls12",
] }
tokio = { version = "1.49", features = ["full"] }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "json",
] }
