[package]
name = "affinidi-secrets-resolver"
description = "Common utilities for Affinidi Trust Development Kit."
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
ahash.workspace = true
serde.workspace = true
serde_json.workspace = true
ssi.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
