[package]
name = "affinidi-tdk-common"
description = "Common utilities for Affinidi Trust Development Kit."
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = ["messaging"]
messaging = []

[dependencies]
affinidi-did-resolver-cache-sdk.workspace = true
affinidi-did-authentication.workspace = true
affinidi-secrets-resolver = { version = "0.1.2" }
ahash.workspace = true
did-peer.workspace = true
moka.workspace = true
reqwest.workspace = true
rustls.workspace = true
rustls-platform-verifier.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
