[package]
name = "affinidi-tdk"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = ["messaging", "meeting-place"]
messaging = ["dep:affinidi-messaging-sdk"]
meeting-place = ["dep:affinidi-meeting-place"]

[dependencies]
affinidi-did-resolver-cache-sdk.workspace = true
affinidi-messaging-sdk = { workspace = true, optional = true }
affinidi-messaging-didcomm.workspace = true
affinidi-did-authentication.workspace = true
affinidi-tdk-common = { version = "0.1.0" }
affinidi-secrets-resolver = { version = "0.1.2" }
affinidi-meeting-place = { workspace = true, optional = true }
clap.workspace = true
did-peer.workspace = true
reqwest.workspace = true
rustls.workspace = true
rustls-platform-verifier.workspace = true
serde_json.workspace = true
ssi.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
