[package]
name = "affinidi-did-common"
version = "0.2.0"
description = "Affinidi DID Library"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
rust-version.workspace = true

[dependencies]
affinidi-encoding.workspace = true

# External Crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = { version = "2.5", features = ["serde"] }

[lints]
workspace = true