[package]
name = "affinidi-did-resolver-cache-server"
version = "0.5.5"
description = "Affinidi DID Network Cache + Resolver Service"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
rust-version.workspace = true

[dependencies]
# Affinidi Crates
affinidi-did-resolver-cache-sdk = { workspace = true, features = ["network"] }
did-peer.workspace = true

# External Crates
ahash = "0.8"
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
chrono = "0.4"
http = "1.3"
moka = { version = "0.12", features = ["future"] }
rand = "0.9"
regex = "1.11"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
# ssi = { version = "0.12", features = ["secp384r1"] }
ssi = { path = "https://github.com/stormer78/ssi", features = ["secp384r1"] }
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }
toml = "0.9"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
