[package]
name = "affinidi-did-resolver-cache-server"
version = "0.7.0"
description = "Affinidi DID Network Cache + Resolver Service"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
rust-version.workspace = true

[dependencies]
# Affinidi Crates
affinidi-did-resolver-cache-sdk = { version = "0.8", features = ["network"] }
affinidi-did-common = "0.3"

# External Crates
ahash = "0.8"
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
chrono = "0.4"
http = "1.4"
moka = { version = "0.12", features = ["future"] }
rand = "0.10"
regex = "1.12"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.49", features = ["full"] }
toml = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
affinidi-secrets-resolver = "0.5"

[lints]
workspace = true
