[package]
name = "affinidi-did-resolver-traits"
version = "0.1.0"
description = "Resolver traits for pluggable DID resolution"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
rust-version.workspace = true

[dependencies]
affinidi-did-common = { version = "0.3", path = "../affinidi-did-common" }
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1.49", features = ["macros", "rt"] }

[lints]
workspace = true
